Fix: PhotoSlideshow layout on small screens

--- a/photography/frontend/src/PhotoSlideshow/component/ImagePresenter/index.css
+++ b/photography/frontend/src/PhotoSlideshow/component/ImagePresenter/index.css
@@ -3,12 +3,12 @@
   justify-content: center;
   align-items: center;
   flex-shrink: visible;
+  flex: 1;
   gap: 4rem;
   
   min-height: 0;
   min-width: 0;
-  margin: 2rem;
-  object-fit: fit-content;
+  padding: 2rem;
 
   & > .link-float {
     opacity: 90%;
@@ -27,7 +27,8 @@
 
   & > .image {
     display: block;
-    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
     object-fit: cover;
     aspect-ratio: 1 / 1.5;
 
@@ -59,7 +60,7 @@
 
 @container main-container (width < 800px) {
   .image-presenter {
-    margin: auto 1rem;
+    margin: 0 1rem;
     padding: 2rem;
     gap: 0;
 
@@ -81,7 +82,7 @@
 
     & > .image {
       width: 100%;
-      height: unset;
+      max-height: 100%;
     }
   }
 
@@ -89,7 +90,7 @@
 
 @container main-container (width < 500px) {
   .image-presenter {
-    margin: auto 0rem;
+    margin: 0;
     padding: 1rem 0;
 
     & > .link-float {
